--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -88,6 +88,9 @@ a {
         background-position-y: 25%;
         background-position-x: 50%
     }
+    .slightly-down {
+        background-position-y: 45%;
+    }
     .scroll-down-arrow{
         bottom: 54vh;
     }
@@ -95,10 +98,11 @@ a {
         color: #eee;
         cursor: default;
         position: absolute;
+        font-weight: bold;
         top: 40%;
         left: 50%;
         padding: 18px;
-        font-size: 25px;
+        font-size: 50px;
         text-align: center;
         transform: translate(-50%, 0%);
         @media screen and (max-width: 630px){
