--- a/hacksoft/templates/website/our_team_page.html
+++ b/hacksoft/templates/website/our_team_page.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="new technologies-we-use-heading">
   {% image page.header_image max-1366x1366 as header_image %}
-  <div class="new static-header dimmed-image" style="background-image: url({{header_image.url}})">
+  <div class="new static-header dimmed-image slightly-down" style="background-image: url({{header_image.url}})">
     <div class="new heading">
       <p>{{page.header_text|richtext}}</p>
     </div>
