--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -387,32 +387,33 @@ a {
   .technologies-logos img {
     padding: 21px; }
 
-.our-team-images .team-member {
-  width: 220px;
-  margin-bottom: 20px;
-  display: inline-block; }
-  @media screen and (max-width: 425px) {
-    .our-team-images .team-member {
-      width: 50%; } }
-  .our-team-images .team-member img {
-    width: 170px;
-    border-radius: 50%; }
-    @media screen and (max-width: 375px) {
-      .our-team-images .team-member img {
-        width: 130px;
-        height: auto; } }
-  .our-team-images .team-member .name {
-    color: #F79824;
-    font-weight: 700;
-    font-size: 20px;
-    margin-top: 20px; }
-.our-team-images .team-main, .our-team-images .team-secondary {
-  width: 100%;
-  height: auto;
-  border: 2px solid orange;
-  cursor: pointer; }
-.our-team-images .team-secondary {
-  display: none; }
+.our-team-images {
+  margin-left: -50%;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  width: 200%;
+  background-attachment: fixed; }
+  .our-team-images .team-member {
+    width: 220px;
+    margin-bottom: 20px;
+    display: inline-block; }
+    @media screen and (max-width: 425px) {
+      .our-team-images .team-member {
+        width: 50%; } }
+    .our-team-images .team-member img {
+      width: 170px;
+      border-radius: 50%; }
+      @media screen and (max-width: 375px) {
+        .our-team-images .team-member img {
+          width: 130px;
+          height: auto; } }
+    .our-team-images .team-member .name {
+      color: #F79824;
+      font-weight: 700;
+      font-size: 20px;
+      margin-top: 20px; }
 
 .footer {
   min-height: 270px;
@@ -1000,5 +1001,25 @@ a {
       background: #FFF; }
     .project-description .text-box:last-of-type {
       margin-bottom: 150px; }
+
+.vertical-sections-container {
+  display: flex;
+  width: 400px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  color: white; }
+  .vertical-sections-container .vertical-section {
+    height: 100%;
+    width: 50%;
+    border-left: 1px solid silver;
+    padding: 30px;
+    text-align: left; }
+    .vertical-sections-container .vertical-section:first-child {
+      border-left: 0;
+      text-align: right; }
+    .vertical-sections-container .vertical-section .section-header {
+      font-weight: 700;
+      font-size: 20px; }
 
 /*# sourceMappingURL=main.css.map */
