--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -63,30 +63,28 @@
     {% block content %}
     {% endblock content %}
     <div class="footer background">
-
-      <div class="section book-a-meeting">
-        <!-- <a class="book-a-meeting-button">Book a meeting</a> -->
-      </div>
-
-      <div class="footer-text">
-        <div class="text-box">
-          Some text here............
+      <div class="vertical-sections-container">
+        <div class="vertical-section">
+          <div class="section-header">
+          Links
+          </div>
+          <div class="section-content">
+            <ul>
+              <li>HackConf</li>
+              <li>HackFMI</li>
+              <li>HackBulgaria</li>
+              <li>HackGroup</li>
+            </ul>
+          </div>
         </div>
-      </div>
-
-      <div class="social-buttons">
-        <a href="#" class="social-button facebook">
-          <i class="fa fa-facebook"></i>
-        </a>
-        <a href="#" class="social-button github">
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="#" class="social-button twitter">
-          <i class="fa fa-twitter"></i>
-        </a>
-        <a href="#" class="social-button linkedin">
-          <i class="fa fa-linkedin"></i>
-        </a>
+        <div class="vertical-section">
+          <div class="section-header">
+          Contact Us
+          </div>
+          <div class="section-content">
+            Book a meeting
+          </div>
+        </div>
       </div>
     </div>
 
