--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -70,10 +70,9 @@
           </div>
           <div class="section-content">
             <ul>
-              <li>HackConf</li>
-              <li>HackFMI</li>
-              <li>HackBulgaria</li>
-              <li>HackGroup</li>
+              <li><a href="https://hackconf.bg/">HackConf</a></li>
+              <li><a href="http://hackfmi.com/">HackFMI</a></li>
+              <li><a href="https://hackbulgaria.com/">HackBulgaria</a></li>
             </ul>
           </div>
         </div>
