--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -48,10 +48,10 @@
             <li class="child sibling {% menu_active 'how-we-work' %}">
               <a href="/how-we-work/">How we work</a>
             </li>
-            <li class="child sibling {% menu_active 'our-work' %}">
+<!--             <li class="child sibling {% menu_active 'our-work' %}">
               <a href="/our-work/">Our Work</a>
             </li>
-            <li class="child sibling {% menu_active 'our-team' %}">
+ -->            <li class="child sibling {% menu_active 'our-team' %}">
               <a href="/our-team/">Our Team</a>
             </li>
           </ul>
