Fix home page image size

--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -548,7 +548,8 @@ a {
     z-index: 1;
     width: 200%;
     background-attachment: fixed;
-    
+    background-size:100%;
+
     .team-member {
         width:220px;
         margin-bottom: 20px;
