--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -62,30 +62,8 @@
 
     {% block content %}
     {% endblock content %}
-    <div class="footer background">
-      <div class="vertical-sections-container">
-        <div class="vertical-section">
-          <div class="section-header">
-          Links
-          </div>
-          <div class="section-content">
-            <ul>
-              <li><a href="https://hackconf.bg/">HackConf</a></li>
-              <li><a href="http://hackfmi.com/">HackFMI</a></li>
-              <li><a href="https://hackbulgaria.com/">HackBulgaria</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="vertical-section">
-          <div class="section-header">
-          Contact Us
-          </div>
-          <div class="section-content">
-            Book a meeting
-          </div>
-        </div>
-      </div>
-    </div>
+
+    {% footer %}
 
   </div>
 </body>
