--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -59,6 +59,7 @@ a {
 
 .how-we-work .how-we-work-image {
   width: 100vw;
+  height: 40vw;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%); }
 
@@ -344,15 +345,17 @@ a {
       color: #999;
       padding-top: 30px;
       padding-bottom: 30px; }
-    .content-wrapper .section .our-team-text div, .content-wrapper .section .technologies-text div {
-      color: #999;
-      padding-top: 30px;
-      padding-bottom: 30px;
-      line-height: 35px;
-      width: 100%;
-      max-width: 90vw;
-      margin: auto;
-      font-size: 21px; }
+    .content-wrapper .section .our-team-text, .content-wrapper .section .technologies-text {
+      padding-bottom: 0 !important; }
+      .content-wrapper .section .our-team-text div, .content-wrapper .section .technologies-text div {
+        color: #999;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        line-height: 35px;
+        width: 100%;
+        max-width: 90vw;
+        margin: auto;
+        font-size: 21px; }
     .content-wrapper .section .technologies-text.primary-focus-text {
       margin-bottom: 0; }
   .content-wrapper h1.lead-text {
@@ -388,14 +391,19 @@ a {
     padding: 21px; }
 
 .our-team-images {
-  margin-left: -50%;
-  height: 500px;
-  overflow: hidden;
-  position: relative;
-  z-index: 1;
-  width: 200%;
+  background-repeat: no-repeat;
+  height: 48vw;
+  width: 100vw;
   background-attachment: fixed;
-  background-size: 100%; }
+  background-size: 100%;
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  padding-bottom: 30px !important;
+  margin-bottom: -50px !important; }
+  @media all and (orientation: portrait) {
+    .our-team-images {
+      background-attachment: inherit;
+      height: 70vw; } }
   .our-team-images .team-member {
     width: 220px;
     margin-bottom: 20px;
