--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -68,7 +68,7 @@
       </div>
       <div class="section-content-row align-center technologies-logos">
         {% for relation in page.technologies_placement.all %}
-          {% image relation.technology.logo fill-100x100 as tech_logo %}
+          {% image relation.technology.logo max-100x100 as tech_logo %}
           <img src="{{tech_logo.url}}" class="filter_image wow flipInX" />
         {% endfor %}
       </div>
