--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -49,8 +49,9 @@
           <p>{{ page.how_we_work_title }}</p>
         </div>
       </div>
-      {% image page.how_we_work_image max-1280x450 class="how-we-work-image" %}
-
+      <a href="/how-we-work/">
+        {% image page.how_we_work_image max-1280x450 class="how-we-work-image" %}
+      </a>
     </div>
 
     <div class="section technologies-we-use">
@@ -60,7 +61,7 @@
        </div>
      </div>
      <div class="section-content-row">
-      <div class="section-content-row align-center panda-pic">
+      <div class="align-center panda-pic">
         {% image page.technologies_we_use_image original %}
       </div>
       <div class="section-content-row align-center primary-focus-text technologies-text">
