--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -589,6 +589,7 @@ a {
         text-align: center;
         position:relative;
         z-index:2;
+        width: 195px;
 
         .book-a-meeting-button {
             border:4px solid #F79824;
