--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -6,7 +6,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>HackSoft</title>
+    <title>{{ self.seo_title }}</title>
+    <meta name="description" content="{{ self.search_description }}">
+    <meta property="og:image" content="/media/images/team4.2e16d0ba.fill-1920x1200.jpg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -18,7 +21,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-
     <!-- This file stores project-specific CSS -->
     <link href="{% static 'css/main.css' %}" rel="stylesheet">
     <link href="{% static 'css/icons.css' %}" rel="stylesheet">
@@ -27,7 +29,6 @@
   <body>
 
   <div class="page-wrapper">
-
     <div class="header">
       <div class="header-container float-container">
 
@@ -48,6 +49,8 @@
             <li class="child sibling {% menu_active 'how-we-work' %}">
               <a href="/how-we-work/">How we work</a>
             </li>
+  }
+  }
 <!--             <li class="child sibling {% menu_active 'our-work' %}">
               <a href="/our-work/">Our Work</a>
             </li>
