--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{ self.seo_title }}</title>
     <meta name="description" content="{{ self.search_description }}">
-    <meta property="og:image" content="/media/images/team4.2e16d0ba.fill-1920x1200.jpg" />
+    <meta property="og:image" content="http://hacksoft.io/media/images/team4.2e16d0ba.fill-1920x1200.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
