Remove useless migration

--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -86,7 +86,7 @@
       <div class="section-content-row align-center our-team-text">
         {{ page.our_team_center|richtext }}
       </div>
-      {% image page.team_image_main fill-1920x1200 as team_photo %}
+      {% image page.team_image_main original as team_photo %}
       <div class="section-content-row align-center our-team-images" style="background-image:url({{team_photo.url}})"></div>
     </div>
   </div>
