--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -62,6 +62,8 @@ a {
   height: 40vw;
   margin-left: calc(-50vw + 50%);
   margin-right: calc(-50vw + 50%); }
+.how-we-work .section-heading:after {
+  margin-left: -35px !important; }
 
 .technologies-we-use-heading .dimmed-image {
   height: 50vh;
@@ -112,6 +114,9 @@ a {
     margin-top: 20vh; }
     .universal-header .header-image-frame .header-main-text h1, .homepage-header .header-image-frame .header-main-text h1, .static-header .header-image-frame .header-main-text h1 {
       font-size: 300%; }
+      @media screen and (max-width: 630px) {
+        .universal-header .header-image-frame .header-main-text h1, .homepage-header .header-image-frame .header-main-text h1, .static-header .header-image-frame .header-main-text h1 {
+          font-size: 200%; } }
   .universal-header .header-image-frame .header-info-text, .homepage-header .header-image-frame .header-info-text, .static-header .header-image-frame .header-info-text {
     width: 100%;
     text-align: center;
@@ -120,6 +125,9 @@ a {
     font-weight: 300;
     font-size: 250%;
     padding-top: 80px; }
+    @media screen and (max-width: 630px) {
+      .universal-header .header-image-frame .header-info-text, .homepage-header .header-image-frame .header-info-text, .static-header .header-image-frame .header-info-text {
+        font-size: 180%; } }
     .universal-header .header-image-frame .header-info-text i, .homepage-header .header-image-frame .header-info-text i, .static-header .header-image-frame .header-info-text i {
       font-style: italic; }
 
@@ -145,7 +153,7 @@ a {
   top: 0px;
   width: 100%;
   max-width: 100vw;
-  z-index: 100;
+  z-index: 101;
   border-top: 3px solid #F79824;
   -webkit-transition: all 1.0s ease;
   -moz-transition: all 1.0s ease;
@@ -365,7 +373,11 @@ a {
     font-size: 55px;
     color: #666;
     line-height: 60px;
-    padding-top: 77px; }
+    padding-top: 70px; }
+    @media screen and (max-width: 630px) {
+      .content-wrapper h1.lead-text {
+        font-size: 200%;
+        line-height: 50px; } }
   .content-wrapper h2.lead-subtext {
     max-width: 800px;
     margin: auto;
@@ -376,6 +388,10 @@ a {
     font-size: 30px;
     color: #666;
     max-width: 90vw; }
+    @media screen and (max-width: 630px) {
+      .content-wrapper h2.lead-subtext {
+        font-size: 180%;
+        line-height: 50px; } }
   .content-wrapper h1.top-heading {
     padding-top: 45px;
     margin-bottom: 0px; }
@@ -404,7 +420,11 @@ a {
   @media all and (orientation: portrait) {
     .our-team-images {
       background-attachment: inherit;
-      height: 70vw; } }
+      height: 41vw;
+      background-position-y: 0;
+      margin-bottom: 0px !important;
+      padding-bottom: 0px !important;
+      margin-top: -60px; } }
   .our-team-images .team-member {
     width: 220px;
     margin-bottom: 20px;
@@ -434,7 +454,8 @@ a {
     text-align: center;
     position: relative;
     z-index: 2;
-    width: 195px; }
+    text-align: left;
+    padding-right: 10px; }
     .footer .book-a-meeting .book-a-meeting-button {
       border: 4px solid #F79824;
       font-size: 20px;
@@ -442,7 +463,8 @@ a {
       color: white;
       font-weight: 900;
       display: inline-block;
-      cursor: pointer; }
+      cursor: pointer;
+      text-align: center; }
   .footer .footer-text {
     width: 100%;
     margin: 20px 0;
@@ -494,7 +516,8 @@ a {
     @media screen and (max-width: 700px) {
       .how-we-work .what-we-do-container .what-we-do-block {
         padding: 2%;
-        width: 100%; } }
+        width: 100%;
+        margin: 15px 0 0 0; } }
     .how-we-work .what-we-do-container .what-we-do-block img {
       width: 100%;
       height: auto; }
@@ -647,9 +670,6 @@ a {
   .social-button.github:hover {
     color: #ffffff;
     background-color: #505050; }
-
-.timeline-container {
-  margin-right: -34px; }
 
 .timeline {
   list-style: none;
@@ -1016,7 +1036,6 @@ a {
 
 .vertical-sections-container {
   display: flex;
-  width: 400px;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -1024,7 +1043,6 @@ a {
   .vertical-sections-container .vertical-section {
     height: 100%;
     width: 50%;
-    padding: 30px;
     padding-top: 20px;
     text-align: left;
     position: relative; }
@@ -1037,9 +1055,16 @@ a {
       background-color: silver;
       content: ""; }
     .vertical-sections-container .vertical-section:first-child {
-      text-align: right; }
+      text-align: right;
+      padding: 30px 30px 0 0; }
+      @media screen and (max-width: 450px) {
+        .vertical-sections-container .vertical-section:first-child {
+          padding: 10px 10px 0 0; } }
     .vertical-sections-container .vertical-section:last-child:after {
       display: none; }
+    @media screen and (max-width: 450px) {
+      .vertical-sections-container .vertical-section:last-child {
+        padding: 10px 0 0  10px; } }
     .vertical-sections-container .vertical-section .section-header {
       font-weight: 700;
       font-size: 20px;
