--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -84,6 +84,9 @@ a {
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
   }
+  .section-heading:after {
+    margin-left: -35px !important;
+  }
 }
 .technologies-we-use-heading{
     .dimmed-image{
@@ -146,6 +149,9 @@ a {
             margin-top: 20vh;
             h1 {
               font-size: 300%;
+              @media screen and (max-width: 630px){
+                font-size: 200%;
+              }
             }
         }
 
@@ -157,6 +163,9 @@ a {
             font-weight: 300;
             font-size: 250%;
             padding-top: 80px;
+            @media screen and (max-width: 630px){
+                font-size: 180%;
+            }
             i {
                 font-style: italic;
             }
@@ -196,7 +205,7 @@ a {
     top: 0px;
     width: 100%;
     max-width: 100vw;
-    z-index: 100;
+    z-index: 101;
     border-top: 3px solid #F79824;
 
     -webkit-transition: all 1.0s ease;
@@ -500,7 +509,11 @@ a {
         font-size: 55px;
         color:#666;
         line-height: 60px;
-        padding-top: 77px;
+        padding-top: 70px;
+        @media screen and (max-width: 630px){
+            font-size: 200%;
+            line-height: 50px;
+        }
     }
     h2.lead-subtext {
         max-width:800px;
@@ -512,6 +525,10 @@ a {
         font-size: 30px;
         color:#666;
         max-width: 90vw;
+        @media screen and (max-width: 630px){
+            font-size: 180%;
+            line-height: 50px;
+        }
     }
 
     h1.top-heading{
@@ -553,7 +570,11 @@ a {
     margin-bottom: -50px !important;
     @media all and (orientation:portrait) {
       background-attachment: inherit;
-      height: 70vw;
+      height: 41vw;
+      background-position-y: 0;
+      margin-bottom: 0px !important;
+      padding-bottom: 0px !important;
+      margin-top: -60px;
     }
     .team-member {
         width:220px;
@@ -590,7 +611,8 @@ a {
         text-align: center;
         position:relative;
         z-index:2;
-        width: 195px;
+        text-align: left;
+        padding-right: 10px;
 
         .book-a-meeting-button {
             border:4px solid #F79824;
@@ -600,6 +622,7 @@ a {
             font-weight: 900;
             display:inline-block;
             cursor:pointer;
+            text-align: center;
         }
     }
     .footer-text{
@@ -659,6 +682,7 @@ a {
         @media screen and (max-width: 700px){
           padding: 2%;
           width: 100%;
+          margin: 15px 0 0 0;
         }
         img {
           width: 100%;
@@ -879,9 +903,6 @@ a {
 
 
 // TIMELINE COPY PASTE
-.timeline-container {
-    margin-right: -34px;
-}
 
 .timeline {
     list-style: none;
@@ -1356,7 +1377,6 @@ a {
 
 .vertical-sections-container {
     display:flex;
-    width:400px;
     text-align: center;
     margin-left:auto;
     margin-right:auto;
@@ -1365,7 +1385,6 @@ a {
     .vertical-section {
         height:100%;
         width:50%;
-        padding:30px;
         padding-top: 20px;
         text-align: left;
         position:relative;
@@ -1382,11 +1401,20 @@ a {
 
         &:first-child{
           text-align: right;
+          @media screen and (max-width: 450px){
+            padding: 10px 10px 0 0;
+          }
+          padding:30px 30px 0 0;
+
+
         }
 
         &:last-child {
             &:after {
                 display:none;
+            }
+            @media screen and (max-width: 450px){
+             padding: 10px 0 0  10px;
             }
         }
         .section-header {
