--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -9,8 +9,7 @@
     <title>{{ self.seo_title }}</title>
     <meta name="description" content="{{ self.search_description }}">
     <meta property="og:image" content="http://hacksoft.io/media/images/team4.2e16d0ba.fill-1920x1200.jpg" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -49,10 +48,10 @@
             <li class="child sibling {% menu_active 'how-we-work' %}">
               <a href="/how-we-work/">How we work</a>
             </li>
-<!--        <li class="child sibling {% menu_active 'our-work' %}">
-              <a href="/our-work/">Our Work</a>
+           <li class="child sibling {% menu_active 'our-clients' %}">
+              <a href="/our-clients/">Our Clients</a>
             </li>
- -->            <li class="child sibling {% menu_active 'our-team' %}">
+            <li class="child sibling {% menu_active 'our-team' %}">
               <a href="/our-team/">Our Team</a>
             </li>
           </ul>
