--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1386,6 +1386,7 @@ a {
         height:100%;
         width:50%;
         padding-top: 20px;
+        padding-left: 20px;
         text-align: left;
         position:relative;
 
@@ -1445,3 +1446,33 @@ a {
   }
 }
 
+
+
+.client-description {
+  padding: 60px 0 20px 0;
+}
+
+.portfolio-technologies {
+  img {
+    height: 70px;
+    padding: 5px;
+  }
+}
+
+.process_panda {
+  position: absolute;
+  width: 190px;
+  left: 30px;
+  top: 100vh;
+  @media screen and (max-width: 1550px){
+    display: none;
+  }
+}
+
+.technologies-panda {
+  position: absolute;
+  left: -150px;
+  @media screen and (max-width: 1550px){
+    display: none;
+  }
+}
