--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1106,4 +1106,22 @@ a {
     .technologies-panda {
       display: none; } }
 
+.footer-panda {
+  text-align: center; }
+
+.box-container {
+  padding: 20px 0 20px 0; }
+  .box-container .client-box {
+    height: 15vw;
+    width: 15vw;
+    border: 3px solid #F79824;
+    margin: 0.5vw;
+    padding: 0.5vw;
+    display: flex;
+    float: left;
+    cursor: pointer; }
+    .box-container .client-box .box-logo {
+      width: 100%;
+      margin: auto; }
+
 /*# sourceMappingURL=main.css.map */
