--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>{{ self.seo_title }}</title>
     <meta name="description" content="{{ self.search_description }}">
-    <meta property="og:image" content="http://hacksoft.io/media/images/team4.2e16d0ba.fill-1920x1200.jpg" />
+    <!-- <meta property="og:image" content="http://hacksoft.io/media/images/team4.2e16d0ba.fill-1920x1200.jpg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -53,6 +53,9 @@
             </li>
             <li class="child sibling {% menu_active 'our-team' %}">
               <a href="/our-team/">Our Team</a>
+            </li>
+            <li class="child sibling {% menu_active 'contact-us' %}">
+              <a href="/contact-us/">Contact Us</a>
             </li>
           </ul>
         </nav>
