--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -21,7 +21,11 @@ a {
     color: inherit; }
 
 .page-wrapper {
-  background-color: #fff; }
+  background-color: #fff;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 170px; }
 
 .dimmed-image {
   position: relative;
@@ -449,22 +453,36 @@ a {
   min-height: 170px;
   background-color: #505050;
   position: relative;
-  overflow: hidden; }
-  .footer .book-a-meeting {
-    text-align: center;
-    position: relative;
-    z-index: 2;
-    text-align: left;
-    padding-right: 10px; }
-    .footer .book-a-meeting .book-a-meeting-button {
-      border: 4px solid #F79824;
-      font-size: 20px;
-      padding: 6px 15px 8px 15px;
-      color: white;
-      font-weight: 900;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  bottom: 0; }
+  .footer .footer-container {
+    max-width: 1100px;
+    margin-left: auto;
+    margin-right: auto; }
+    @media screen and (max-width: 1100px) {
+      .footer .footer-container {
+        max-width: 90%; } }
+  .footer .vertical-sections-container .vertical-section {
+    padding-top: 30px;
+    text-align: left; }
+    .footer .vertical-sections-container .vertical-section:first-child {
+      text-align: left; }
+    .footer .vertical-sections-container .vertical-section.right {
+      text-align: right; }
+    .footer .vertical-sections-container .vertical-section:after {
+      display: none; }
+  .footer .copyright {
+    font-weight: bold; }
+  .footer ul {
+    padding-left: 0;
+    margin-bottom: 20px; }
+    .footer ul li {
       display: inline-block;
-      cursor: pointer;
-      text-align: center; }
+      margin-right: 20px; }
+      .footer ul li a:hover {
+        color: #F79824; }
   .footer .footer-text {
     width: 100%;
     margin: 20px 0;
