--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -32,6 +32,10 @@ a {
 
 .page-wrapper {
     background-color:#fff;
+    position:absolute;
+    width:100%;
+    height:100%;
+    padding-bottom:170px;
 }
 
 .dimmed-image {
@@ -401,6 +405,7 @@ a {
     margin:auto;
     position:relative;
     padding-bottom: 50px;
+
     @media screen and (max-width: 1100px) {
         max-width: 90vw;
         margin-left: 5vw;
@@ -606,25 +611,54 @@ a {
     background-color: #505050;
     position: relative;
     overflow: hidden;
+    position: absolute;
+    width:100%;
+    bottom:0;
 
-    .book-a-meeting {
-        text-align: center;
-        position:relative;
-        z-index:2;
-        text-align: left;
-        padding-right: 10px;
+    .footer-container {
+        max-width:1100px;
+        margin-left:auto;
+        margin-right:auto;
+        
+        @media screen and (max-width:1100px) {
+            max-width:90%;
+        }
 
-        .book-a-meeting-button {
-            border:4px solid #F79824;
-            font-size:20px;
-            padding:6px 15px 8px 15px;
-            color:white;
-            font-weight: 900;
-            display:inline-block;
-            cursor:pointer;
-            text-align: center;
+    }
+
+    .vertical-sections-container {
+        .vertical-section {
+            padding-top:30px;
+            text-align:left;
+            &:first-child {
+                text-align: left; 
+            }
+            &.right {
+                text-align:right;
+            }
+            &:after {
+                display:none;
+            }
         }
     }
+
+    .copyright {
+        font-weight: bold;
+    }
+    
+    ul {
+        padding-left:0;
+        margin-bottom:20px;
+        li {
+            display:inline-block;
+            margin-right:20px;
+
+            a:hover {
+                color: #F79824;
+            }
+        }
+    }
+
     .footer-text{
         width: 100%;
         margin: 20px 0;
