--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -1,42 +1,29 @@
 {% load wagtailcore_tags %}
 
 <div class="footer background">
-  <div class="vertical-sections-container">
-    <div class="vertical-section">
-      <div class="section-header">
-        {{ footer.links_text }}
-      </div>
-      <div class="section-content">
-        <ul>
-          {% for block in footer.links %}
-            {{ block }}
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-    <div class="vertical-section">
-      <div class="section-header">
-        {{ footer.contact_text }}
-      </div>
-      <div class="book-a-meeting">
-        <div class="book-a-meeting-button"   data-toggle="modal" data-target=".bs-example-modal-lg">
-          {{ footer.button_text }}
+  <div class="footer-container">
+    <div class="vertical-sections-container">
+      <div class="vertical-section">
+        <div class="section-header">
+          {{ footer.links_text }}
+        </div>
+        <div class="section-content">
+          <ul>
+            {% for block in footer.links %}
+              {{ block }}
+            {% endfor %}
+          </ul>
+          <div class="copyright">
+            Copyright 2017 HackSoft
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-        <div class="row">
-
-          <div class="col-md-12">
+      <div class="vertical-section right">
+        <div class="section-header">
+          {{ footer.contact_text }}
+        </div>
+        <div>
           {{ footer.popup_text|richtext }}
-          </div>
-
         </div>
       </div>
     </div>
