--- a/hacksoft/static/css/main.css
+++ b/hacksoft/static/css/main.css
@@ -1,10 +1,14 @@
+html {
+  height: 100%; }
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', serif;
   color: #222;
   overflow-x: hidden;
-  font-size: 16px; }
+  font-size: 16px;
+  height: 100%; }
 
 a {
   color: inherit;
@@ -24,7 +28,7 @@ a {
   background-color: #fff;
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: auto !important;
   padding-bottom: 170px; }
 
 .dimmed-image {
