--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -1,3 +1,7 @@
+html {
+    height:100%;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -5,6 +9,7 @@ body{
     color:#222;
     overflow-x:hidden;
     font-size: 16px;
+    height:100%;
 }
 
 a {
@@ -34,7 +39,7 @@ a {
     background-color:#fff;
     position:absolute;
     width:100%;
-    height:100%;
+    height: auto !important;
     padding-bottom:170px;
 }
 
