--- a/hacksoft/templates/website/contacts_page.html
+++ b/hacksoft/templates/website/contacts_page.html
@@ -18,6 +18,7 @@
     <div class="section-content">
       {{ page.text|richtext }}
     </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d733.6408610094495!2d23.34545182925882!3d42.64941399869803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDLCsDM4JzU3LjkiTiAyM8KwMjAnNDUuNiJF!5e0!3m2!1sen!2sbg!4v1484585189070" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
 {% endblock content %}
