--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -620,7 +620,7 @@ a {
     overflow: hidden;
     position: absolute;
     width:100%;
-    bottom:0;
+    bottom:-170px;
 
     .footer-container {
         max-width:1100px;
