--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -71,7 +71,7 @@
       <div class="section-content-row align-center technologies-logos">
         {% for relation in page.technologies_placement.all %}
           {% image relation.technology.logo max-100x100 as tech_logo %}
-          <img src="{{tech_logo.url}}" class="filter_image wow flipInX"/>
+          <img src="{{tech_logo.url}}" class="filter_image wow flipInX" title="{{relation.technology.name}}" />
         {% endfor %}
       </div>
     </div>
@@ -108,12 +108,12 @@
 
     <div class="row box-container">
     {% for client in clients %}
-      <a href="/our-clients/">
         <div class="client-box" data-client-number="{{ forloop.counter }}">
           {% image client.logo original as client_logo %}
-          <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
+          <a href="/our-clients/">
+            <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
+          </a>
         </div>
-      </a>
     {% endfor %}
     </div>
 
