--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -47,7 +47,7 @@
             <li class="child sibling {% menu_active 'how-we-work' %}">
               <a href="/how-we-work/">How we work</a>
             </li>
-           <li class="child sibling {% menu_active 'our-clients' %}">
+           <li class="child sibling black-active-text {% menu_active 'our-clients' %}">
               <a href="/our-clients/">Our Clients</a>
             </li>
             <li class="child sibling {% menu_active 'our-team' %}">
