--- a/hacksoft/templates/website/contacts_page.html
+++ b/hacksoft/templates/website/contacts_page.html
@@ -10,6 +10,7 @@
     <div class="new scroll-down-arrow">
       <img class="filer_image " alt="scroll_down_arrow.png" src="{% static  'images/header/scroll_down_arrow.png'%}" />
     </div>
+    <div class="dim"></div>
   </div>
 </div>
 
