--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -49,30 +49,39 @@ a {
     border-bottom:2px solid #F79824;
 
     .dimmed-image-background {
-        position: relative;
-        overflow: hidden;
-        width:100vw;
-        height:100vh;
-        max-height:100vh;
-        text-align:center;
-        .video-container {
-          position:absolute;
-          height:100%;
-          width:200%;
-          left:-50%;
-          #player {
-            height:auto;
-            min-height:100%;
-            min-width:50%;
-          }
+      position: relative;
+      overflow: hidden;
+      width:100vw;
+      height:100vh;
+      max-height:100vh;
+      text-align:center;
+      .video-container {
+        position:absolute;
+        height:100%;
+        width:200%;
+        left:-50%;
+        #player {
+          height:auto;
+          min-height:100%;
+          min-width:50%;
         }
-        .overlay {
-            position:absolute;
-            width:100%;
-            height:100%;
-            background-color: #000;
-            opacity: 0.6;
-        }
+      }
+      .overlay {
+        position:absolute;
+        width:100%;
+        height:100%;
+        background-color: #000;
+        opacity: 0.6;
+      }
+    }
+
+    .dim {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left:0;
+      top:0;
+      background-color: rgba(120,120,120,0.3);
     }
 
     .scroll-down-arrow {
@@ -108,11 +117,13 @@ a {
     .slightly-down {
         background-position-y: 45%;
     }
-    .scroll-down-arrow{
+    div.scroll-down-arrow{
         bottom: 54vh;
+        z-index: 1;
     }
+
     .heading{
-        color: #eee;
+        color: #fff;
         cursor: default;
         position: absolute;
         font-weight: bold;
@@ -122,6 +133,7 @@ a {
         font-size: 50px;
         text-align: center;
         transform: translate(-50%, 0%);
+        z-index:1;
         @media screen and (max-width: 630px){
             font-size: 17px;
         }
@@ -273,6 +285,9 @@ a {
 
                     &.selected {
                         color: #fff;
+                        &.black-active-text {
+                          color: #000;
+                        }
                     }
                     &:hover {
                         border-bottom:2px solid #F79824;
@@ -918,6 +933,7 @@ a {
             padding-bottom: 0;
         }
     }
+
     .panda-pic {
         padding-top: 35px;
     }
