Fixes on minor bugs

--- a/hacksoft/templates/base.html
+++ b/hacksoft/templates/base.html
@@ -50,10 +50,10 @@
            <li class="child sibling black-active-text {% menu_active 'our-clients' %}">
               <a href="/our-clients/">Our Clients</a>
             </li>
-            <li class="child sibling {% menu_active 'our-team' %}">
+            <li class="child sibling black-active-text {% menu_active 'our-team' %}">
               <a href="/our-team/">Our Team</a>
             </li>
-            <li class="child sibling {% menu_active 'contact-us' %}">
+            <li class="child sibling black-active-text {% menu_active 'contact-us' %}">
               <a href="/contact-us/">Contact Us</a>
             </li>
           </ul>
