--- a/hacksoft/templates/website/contacts_page.html
+++ b/hacksoft/templates/website/contacts_page.html
@@ -15,7 +15,7 @@
 </div>
 
 <div class="content-wrapper" >
-  <div class="section team-lead-text">
+  <div class="section contact-us">
     <div class="section-content">
       {{ page.text|richtext }}
     </div>
