--- a/hacksoft/static/sass/main.scss
+++ b/hacksoft/static/sass/main.scss
@@ -102,9 +102,6 @@ a {
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
   }
-  .section-heading:after {
-    margin-left: -35px !important;
-  }
 }
 .technologies-we-use-heading{
     .dimmed-image{
@@ -228,6 +225,7 @@ a {
     max-width: 100vw;
     z-index: 101;
     border-top: 3px solid #F79824;
+    background-color: rgba(255,255,255,0.4);
 
     -webkit-transition: all 1.0s ease;
     -moz-transition: all 1.0s ease;
@@ -294,6 +292,9 @@ a {
                     }
                     &.selected:hover{
                         border-bottom:2px solid #fff;
+                        &.black-active-text {
+                          border-bottom:2px solid #000;
+                        }
                     }
                 }
             }
@@ -331,7 +332,7 @@ a {
             }
             .toggle {
                 display: block;
-                padding: 14px 20px;
+                padding: 14px 0px;
                 color: #FFF;
                 font-size: 17px;
                 text-decoration: none;
@@ -452,7 +453,7 @@ a {
                 display:block;
                 position:absolute;
                 left:50%;
-                margin-left:-18px;
+                margin-left:-35px;
                 border-top:36px solid #F79824;
                 border-left:35px solid transparent;
                 border-right:35px solid transparent;
@@ -507,11 +508,9 @@ a {
         }
 
         .our-team-text {
-          padding-bottom: 0 !important;
             div {
                 color:#999;
                 padding-top:30px;
-                padding-bottom:30px;
                 line-height: 35px;
                 width: 100%;
                 max-width: 90vw;
@@ -737,7 +736,7 @@ a {
       .what-we-do-block {
         @media screen and (max-width: 700px){
           padding: 2%;
-          width: 100%;
+          width: 96%;
           margin: 15px 0 0 0;
         }
         img {
@@ -815,6 +814,13 @@ a {
 .popup-overlay:target {
     visibility: visible;
     z-index: 4;
+}
+
+.contact-us {
+  padding-top:30px;
+  iframe {
+    max-width:100%;
+  }
 }
 
 .popup {
@@ -1539,7 +1545,6 @@ a {
 }
 
 .box-container {
-  padding: 20px 0 20px 0;
   display: flex;
 
 
