--- a/hacksoft/templates/tags/footer.html
+++ b/hacksoft/templates/tags/footer.html
@@ -14,7 +14,7 @@
             {% endfor %}
           </ul>
           <div class="copyright">
-            Copyright 2017 HackSoft
+            © 2017 HackSoft
           </div>
         </div>
       </div>
