--- a/hacksoft/templates/website/home_page.html
+++ b/hacksoft/templates/website/home_page.html
@@ -71,7 +71,7 @@
       <div class="section-content-row align-center technologies-logos">
         {% for relation in page.technologies_placement.all %}
           {% image relation.technology.logo max-100x100 as tech_logo %}
-          <img src="{{tech_logo.url}}" class="filter_image wow flipInX" title="{{relation.technology.name}}" />
+          <img src="{{tech_logo.url}}" class="filter_image" title="{{relation.technology.name}}" />
         {% endfor %}
       </div>
     </div>
@@ -111,7 +111,7 @@
         <div class="client-box" data-client-number="{{ forloop.counter }}">
           {% image client.logo original as client_logo %}
           <a href="/our-clients/">
-            <img src="{{client_logo.url}}" class="filter_image wow flipInX box-logo"/>
+            <img src="{{client_logo.url}}" class="filter_image box-logo"/>
           </a>
         </div>
     {% endfor %}
